{
  "version": 4,
  "terraform_version": "1.1.5",
  "serial": 204,
  "lineage": "da78cd95-a40c-9c2a-881c-24a067b58177",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/f3226acf-56a9-4339-af8a-730910470f7b/resourceGroups/ik-example/providers/Microsoft.Network/networkInterfaces/ik-jenkins",
            "internal_domain_name_suffix": "m1dezeg05neetnhgoidhce5zcb.dx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "jenkins-configuration",
                "primary": true,
                "private_ip_address": "10.0.1.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/f3226acf-56a9-4339-af8a-730910470f7b/resourceGroups/ik-example/providers/Microsoft.Network/publicIPAddresses/jenkins-public-ip",
                "subnet_id": "/subscriptions/f3226acf-56a9-4339-af8a-730910470f7b/resourceGroups/ik-example/providers/Microsoft.Network/virtualNetworks/ik-vnet/subnets/mySubnet"
              }
            ],
            "location": "westus",
            "mac_address": "00-22-48-09-7A-FD",
            "name": "ik-jenkins",
            "private_ip_address": "10.0.1.5",
            "private_ip_addresses": [
              "10.0.1.5"
            ],
            "resource_group_name": "ik-example",
            "virtual_machine_id": "/subscriptions/f3226acf-56a9-4339-af8a-730910470f7b/resourceGroups/ik-example/providers/Microsoft.Compute/virtualMachines/ik-jenkins"
          },
          "dependencies": [
            "azurerm_public_ip.jenkins",
            "azurerm_resource_group.ik",
            "azurerm_subnet.subnet",
            "azurerm_virtual_network.network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/f3226acf-56a9-4339-af8a-730910470f7b/resourceGroups/ik-example/providers/Microsoft.Network/networkInterfaces/ik-web",
            "internal_domain_name_suffix": "m1dezeg05neetnhgoidhce5zcb.dx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "web-configuration",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/f3226acf-56a9-4339-af8a-730910470f7b/resourceGroups/ik-example/providers/Microsoft.Network/publicIPAddresses/web-public-ip",
                "subnet_id": "/subscriptions/f3226acf-56a9-4339-af8a-730910470f7b/resourceGroups/ik-example/providers/Microsoft.Network/virtualNetworks/ik-vnet/subnets/mySubnet"
              }
            ],
            "location": "westus",
            "mac_address": "00-0D-3A-32-49-D7",
            "name": "ik-web",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "ik-example",
            "virtual_machine_id": "/subscriptions/f3226acf-56a9-4339-af8a-730910470f7b/resourceGroups/ik-example/providers/Microsoft.Compute/virtualMachines/ik-vm"
          },
          "dependencies": [
            "azurerm_public_ip.web",
            "azurerm_resource_group.ik",
            "azurerm_subnet.subnet",
            "azurerm_virtual_network.network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/f3226acf-56a9-4339-af8a-730910470f7b/resourceGroups/ik-example/providers/Microsoft.Network/networkInterfaces/ik-jenkins|/subscriptions/f3226acf-56a9-4339-af8a-730910470f7b/resourceGroups/ik-example/providers/Microsoft.Network/networkSecurityGroups/ik-security-group",
            "network_interface_id": "/subscriptions/f3226acf-56a9-4339-af8a-730910470f7b/resourceGroups/ik-example/providers/Microsoft.Network/networkInterfaces/ik-jenkins",
            "network_security_group_id": "/subscriptions/f3226acf-56a9-4339-af8a-730910470f7b/resourceGroups/ik-example/providers/Microsoft.Network/networkSecurityGroups/ik-security-group"
          },
          "dependencies": [
            "azurerm_network_interface.jenkins",
            "azurerm_network_security_group.security_group",
            "azurerm_public_ip.jenkins",
            "azurerm_resource_group.ik",
            "azurerm_subnet.subnet",
            "azurerm_virtual_network.network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/f3226acf-56a9-4339-af8a-730910470f7b/resourceGroups/ik-example/providers/Microsoft.Network/networkInterfaces/ik-web|/subscriptions/f3226acf-56a9-4339-af8a-730910470f7b/resourceGroups/ik-example/providers/Microsoft.Network/networkSecurityGroups/ik-security-group",
            "network_interface_id": "/subscriptions/f3226acf-56a9-4339-af8a-730910470f7b/resourceGroups/ik-example/providers/Microsoft.Network/networkInterfaces/ik-web",
            "network_security_group_id": "/subscriptions/f3226acf-56a9-4339-af8a-730910470f7b/resourceGroups/ik-example/providers/Microsoft.Network/networkSecurityGroups/ik-security-group"
          },
          "dependencies": [
            "azurerm_network_interface.web",
            "azurerm_network_security_group.security_group",
            "azurerm_public_ip.web",
            "azurerm_resource_group.ik",
            "azurerm_subnet.subnet",
            "azurerm_virtual_network.network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/f3226acf-56a9-4339-af8a-730910470f7b/resourceGroups/ik-example/providers/Microsoft.Network/networkSecurityGroups/ik-security-group",
            "location": "westus",
            "name": "ik-security-group",
            "resource_group_name": "ik-example",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "ssh",
                "priority": 300,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "https",
                "priority": 320,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "http",
                "priority": 340,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "8080",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "jenkins",
                "priority": 360,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.ik"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "httpSecurity",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "80",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/f3226acf-56a9-4339-af8a-730910470f7b/resourceGroups/ik-example/providers/Microsoft.Network/networkSecurityGroups/ik-security-group/securityRules/http",
            "name": "http",
            "network_security_group_name": "ik-security-group",
            "priority": 340,
            "protocol": "Tcp",
            "resource_group_name": "ik-example",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.security_group",
            "azurerm_resource_group.ik"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "httpsSecurity",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "443",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/f3226acf-56a9-4339-af8a-730910470f7b/resourceGroups/ik-example/providers/Microsoft.Network/networkSecurityGroups/ik-security-group/securityRules/https",
            "name": "https",
            "network_security_group_name": "ik-security-group",
            "priority": 320,
            "protocol": "Tcp",
            "resource_group_name": "ik-example",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.security_group",
            "azurerm_resource_group.ik"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "jenkinsSecurity",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "8080",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/f3226acf-56a9-4339-af8a-730910470f7b/resourceGroups/ik-example/providers/Microsoft.Network/networkSecurityGroups/ik-security-group/securityRules/jenkins",
            "name": "jenkins",
            "network_security_group_name": "ik-security-group",
            "priority": 360,
            "protocol": "Tcp",
            "resource_group_name": "ik-example",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.security_group",
            "azurerm_resource_group.ik"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "sshSecurity",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "22",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/f3226acf-56a9-4339-af8a-730910470f7b/resourceGroups/ik-example/providers/Microsoft.Network/networkSecurityGroups/ik-security-group/securityRules/ssh",
            "name": "ssh",
            "network_security_group_name": "ik-security-group",
            "priority": 300,
            "protocol": "Tcp",
            "resource_group_name": "ik-example",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.security_group",
            "azurerm_resource_group.ik"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "availability_zone": "No-Zone",
            "id": "/subscriptions/f3226acf-56a9-4339-af8a-730910470f7b/resourceGroups/ik-example/providers/Microsoft.Network/publicIPAddresses/jenkins-public-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "104.42.121.11",
            "ip_version": "IPv4",
            "location": "westus",
            "name": "jenkins-public-ip",
            "resource_group_name": "ik-example",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.ik"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "availability_zone": "No-Zone",
            "id": "/subscriptions/f3226acf-56a9-4339-af8a-730910470f7b/resourceGroups/ik-example/providers/Microsoft.Network/publicIPAddresses/web-public-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "40.118.191.196",
            "ip_version": "IPv4",
            "location": "westus",
            "name": "web-public-ip",
            "resource_group_name": "ik-example",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.ik"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.1.0/24",
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/f3226acf-56a9-4339-af8a-730910470f7b/resourceGroups/ik-example/providers/Microsoft.Network/virtualNetworks/ik-vnet/subnets/mySubnet",
            "name": "mySubnet",
            "resource_group_name": "ik-example",
            "virtual_network_name": "ik-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.ik",
            "azurerm_virtual_network.network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "network",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "904cc666-fbda-4948-b4e6-72067113f911",
            "id": "/subscriptions/f3226acf-56a9-4339-af8a-730910470f7b/resourceGroups/ik-example/providers/Microsoft.Network/virtualNetworks/ik-vnet",
            "location": "westus",
            "name": "ik-vnet",
            "resource_group_name": "ik-example",
            "subnet": [
              {
                "address_prefix": "10.0.1.0/24",
                "id": "/subscriptions/f3226acf-56a9-4339-af8a-730910470f7b/resourceGroups/ik-example/providers/Microsoft.Network/virtualNetworks/ik-vnet/subnets/mySubnet",
                "name": "mySubnet"
              }
            ],
            "vm_protection_enabled": false
          },
          "dependencies": [
            "azurerm_resource_group.ik"
          ]
        }
      ]
    }
  ]
}